added Typescript sources

--- a/new-school/src/index.less
+++ b/new-school/src/index.less
@@ -12,7 +12,7 @@ body {
   margin: 8px;
   padding: 8px;
   width: 130px;
-  height: 200px;
+  height: 180px;
   background-color: white;
   -webkit-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.75);
@@ -20,6 +20,7 @@ body {
   
   img {
     width: 90px;
+    max-height: 120px;
     left-padding: 5px;
   }
 
